--- a/.swcrc
+++ b/.swcrc
@@ -1,10 +1,15 @@
 {
   "$schema": "https://json.schemastore.org/swcrc",
   "jsc": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "parser": {
       "syntax": "typescript",
       "tsx": true,
-      "decorators": false
+      "decorators": false,
+      "dynamicImport": true
     },
     "transform": {
       "react": {
@@ -12,7 +17,7 @@
         "pragmaFrag": "React.Fragment",
         "throwIfNamespace": true,
         "development": false,
-        "useBuiltins": false,
+        "useBuiltins": true,
         "runtime": "classic",
         "refresh": true
       },
@@ -23,13 +28,13 @@
           }
         },
         "jsonify": {
-          "minCost": 1024 
+          "minCost": 1024
         }
       }
     },
-    "target": "es2022",
+    "target": "es2020",
     "loose": false,
-    "externalHelpers": false
+    "externalHelpers": true
   },
   "minify": true,
   "sourceMaps": true
