--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.1",
-    "serve": "^14.0.1",
     "swc-loader": "^0.2.3",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
@@ -28,6 +27,6 @@
   "scripts": {
     "build": "webpack --config ./webpack/webpack.prod.conf.js",
     "start": "webpack-dev-server --config ./webpack/webpack.dev.conf.js",
-    "serve": "pnpm build && npx serve dist"
+    "serve": "webpack-dev-server serve --config ./webpack/webpack.prod.conf.js --open"
   }
 }
