--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm run start
-    - run: npm run build
-    - run: npm run serve
+    - name: Setup pnpm
+      uses: pnpm/action-setup@v2.2.2
+    - run: pnpm install
+    - run: pnpm start
+    - run: pnpm build
+    - run: pnpm serve
