--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Setup pnpm
       uses: pnpm/action-setup@v2.2.2
+      with:
+        version: latest
     - run: pnpm install
     - run: pnpm start
     - run: pnpm build
