--- a/.swcrc
+++ b/.swcrc
@@ -20,20 +20,10 @@
         "useBuiltins": true,
         "runtime": "classic",
         "refresh": true
-      },
-      "optimizer": {
-        "globals": {
-          "vars": {
-            "__DEBUG__": "true"
-          }
-        },
-        "jsonify": {
-          "minCost": 1024
-        }
       }
     },
     "target": "es2020",
-    "loose": false,
+    "loose": true,
     "externalHelpers": true
   },
   "minify": true,
