--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@nuxt/friendly-errors-webpack-plugin": "^2.5.2",
     "@swc/cli": "0.1.57",
     "@swc/core": "1.3.22",
     "@swc/helpers": "0.4.14",
@@ -17,7 +18,8 @@
     "webpack": "5.75.0",
     "webpack-cli": "5.0.1",
     "webpack-dev-server": "4.11.1",
-    "webpack-merge": "5.8.0"
+    "webpack-merge": "5.8.0",
+    "webpackbar": "^5.0.2"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -25,8 +27,8 @@
     "react-router-dom": "6.4.5"
   },
   "scripts": {
-    "build": "webpack --config ./webpack/webpack.prod.conf.js",
-    "dev": "webpack-dev-server --config ./webpack/webpack.dev.conf.js",
-    "serve": "webpack serve --config ./webpack/webpack.prod.conf.js --open"
+    "build": "npx webpack --config ./webpack/webpack.prod.conf.js",
+    "dev": "npx webpack-dev-server --config ./webpack/webpack.dev.conf.js",
+    "serve": "npx webpack serve --config ./webpack/webpack.prod.conf.js --open"
   }
 }
