✨ feat(config): typescript config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,9 @@
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
+      "@/*": ["./src/*"]
     },
+    // "plugins": [{ "name": "typescript-plugin-css-modules" }],
 
     /* Projects */
     "incremental": true /* Save .tsbuildinfo files to allow for incremental compilation of projects. */,
