--- a/.swcrc
+++ b/.swcrc
@@ -5,18 +5,24 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "parser": {
-      "syntax": "typescript",
-      "tsx": true,
-      "decorators": false,
-      "dynamicImport": true
+     "parser": {
+      "syntax": "ecmascript",
+      "jsx": true,
+      "dynamicImport": true,
+      "privateMethod": true,
+      "functionBind": true,
+      "classPrivateProperty": true,
+      "exportDefaultFrom": true,
+      "exportNamespaceFrom": true,
+      "decorators": true,
+      "decoratorsBeforeExport": true,
+      "importMeta": true
     },
     "transform": {
       "react": {
         "pragma": "React.createElement",
         "pragmaFrag": "React.Fragment",
         "throwIfNamespace": true,
-        "development": false,
         "useBuiltins": true,
         "runtime": "classic",
         "refresh": true
